# portfolio-github-example

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .tflint.hcl  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci-cd.yml  sast.yml  terraform.yml
cloudformation/: README.md  example-stack.yaml
scripts/: __init__.py  main.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_main.py
